/**
 * Implementación principal del sistema.
 * Esta clase es responsable de iniciar la interfaz gráfica de usuario.
 */
public class SistemaImpl {

    /**
     * Inicia la interfaz gráfica principal del sistema.
     * Este método crea una nueva instancia de MainFrame, que presumiblemente
     * es la ventana principal de la aplicación.
     */
    public void MainFrame() {
        MainFrame iniciarSesion = new MainFrame();
    }
}